--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Efsane Music",
+  "name": "Benita Music",
   "description": "Telegram'ınızın Grup Sesli Sohbeti'nde şarkı çalmak için Açık Kaynaklı bot. Powered by Mehmetbaba55.",
   "keywords": ["music", "voicechat", "telegram"],
   "repository": "https://github.com/Mehmetbaba55/EfsaneMusic",
